Sparse column update with vectorized reading